[Aryan] MOD: Modified admin panel dashboard
