# app/controllers/api/v1/subscriptions_controller.rb
@@ -25,6 +25,7 @@ class Api::V1::SubscriptionsController < ApplicationController
         plan_type: plan_type
       },
       success_url: "http://localhost:5173/success?session_id={CHECKOUT_SESSION_ID}",
+      # success_url: "http://localhost:3000/api/v1/subscriptions/success?session_id={CHECKOUT_SESSION_ID}",
       cancel_url: "https://movie-explorer-app.onrender.com/api/v1/subscriptions/cancel"
     )
 
